--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -25,3 +25,15 @@ longhorn:
   # service:
   #   ui:
   #     type: {{ .Values.longhorn.dashboard.serviceType }}
+  metrics:
+    serviceMonitor:
+      # -- Setting that allows the creation of a Prometheus ServiceMonitor resource for Longhorn Manager components.
+      enabled: false
+      # -- Additional labels for the Prometheus ServiceMonitor resource.
+      additionalLabels: {}
+      # -- Annotations for the Prometheus ServiceMonitor resource.
+      annotations: {}
+      # -- Interval at which Prometheus scrapes the metrics from the target.
+      interval: ""
+      # -- Timeout after which Prometheus considers the scrape to be failed.
+      scrapeTimeout: ""
